[package]
name = "image_comparison"
version = "0.1.0"
authors = ["MFRIbrahim <Mustafa.Ibrahim@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
img_hash = "3.1.1"
anyhow = "1.0.40"
serde = "1.0.125"
serde_json = "1.0.64"
clap = "2.33.3"
dashmap = { version = "4.0.2", features = ["serde"]}
scoped_threadpool = "0.1.9"
num_cpus = "1.13.0"
lazy_static = "1.4.0"
